[package]
name = "get-md"
version = "26.2.100"
edition = "2024"
description = "Fetch a URL (with JS rendering via system Chrome) and convert selected elements to Markdown"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
headless_chrome = "1.0.21"
htmd = "0.5.0"
indicatif = "0.18.3"
url = "2.5.8"

[profile.release]
strip = true
lto = true
